Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-92205

TextEdit show tab character error when tabStopDistance less than tab width

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P5: Not important P5: Not important
    • 6.2.0 Alpha
    • 6.0.0
    • None
    • ubuntu 19.04

      Win10
    • Linux/X11, Windows
    • 78c4d0c48f58854127aa9248f597bf8568f440a1 (qt/qtbase/dev)

      description:

      When QPlainTextEdit sets the value of tabStopDistance to be less than the minimum width of a TAB character, QPlainTextEdit will display the incomplete tab character.

      This bug not only exists in QPlainTextEdit, but also exists in QTextEdit, and it can be reproduced in Windows.

      linux.mp4  and windows.mp4 show the same behaiver of this bug.

       

      reason:

      The character width of a tab is 12px. When the tabStopDistance value is less than 12px, the tab character is not drawn completely. So we should limit the minimum value of tabStopDistance not to be less than the width of the tab character.

        1. linux.mp4
          393 kB
        2. windows.mp4
          550 kB
        3. PlainTextEdit.zip
          7 kB
        For Gerrit Dashboard: QTBUG-92205
        # Subject Branch Project Status CR V

            kingderzhang kingderzhang
            kingderzhang kingderzhang
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes